# ccbnet

./: .gitignore  README.md  plots.ipynb  prospector.yaml  pyproject.toml
ccbnet/: party.py  run.py
fl4bn/: attacks.py  avg_outs.py  combine.py  combine_benchmarks.ipynb  combine_benchmarks.py  comparison.ipynb  comparison.py  disc_fact.py  disc_fact_gpu.py  examples_multi.ipynb  examples_single.ipynb  experiment.py  inf_test.py  inference.py  model.py  noise_test.ipynb  party.py  prod_outs.py  run.py  single_net.py  struct_scores.py  uniform.py  util.py  var_elim_heurs.py  writer.py
fl4bn/decentralized/: client.py
results/: large.csv  random.csv  related.csv  weighting.csv
