[tool.poetry]
name = "fl4bn"
version = "0.1.0"
description = "Federated Learning for Bayesian Networks"
authors = ["Abele Mălan <abele.malan@asml.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pgmpy = "^0.1.21"
numpy = "^1.24.2"
pandas = "^1.5.3"
joblib = "^1.2.0"
networkx = "^3.0.0"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^3.6.1"
ipywidgets = "^8.0.4"
daft = "^0.1.2"
matplotlib = "^3.7.0"
scikit-learn = "^1.2.1"
prospector = { version = "^1.9.0", extras = ["with_bandit"] }
# ruff = "^0.0.241"

[[tool.poetry.source]]
name = "asml"
url = "https://cdl-hadoop-artifactory.asml.com/artifactory/api/pypi/pypi/simple"
default = true
secondary = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
